--- a/PICAPI/index.html
+++ b/PICAPI/index.html
@@ -264,14 +264,14 @@
         	</div>
         	<div class="item">
         		<div class="animate-box">
-	        		<a href="images/img_27.jpg" class="image-popup fh5co-board-img"><img src="images/img_27.jpg" alt="这个PIC貌似走丢了..."></a>
-	        		<div class="fh5co-desc">图片 - Adipisci consequuntur ipsa fugit perspiciatis eligendi. Omnis blanditiis, totam placeat.</div>
+	        		<a href="https://v1.yurikoto.com/wallpaper" class="image-popup fh5co-board-img"><img src="https://v1.yurikoto.com/wallpaper" alt="这个PIC貌似走丢了..."></a>
+	        		<div class="fh5co-desc">图片 - yurikoto</div>
         		</div>
         	</div>
         	<div class="item">
         		<div class="animate-box">
-	        		<a href="images/img_28.jpg" class="image-popup fh5co-board-img"><img src="images/img_28.jpg" alt="这个PIC貌似走丢了..."></a>
-	        		<div class="fh5co-desc">图片 - Adipisci consequuntur ipsa fugit perspiciatis eligendi. Omnis blanditiis, totam placeat.</div>
+	        		<a href="https://v1.yurikoto.com/wallpaper?orientation=vertical" class="image-popup fh5co-board-img"><img src="https://v1.yurikoto.com/wallpaper?orientation=vertical" alt="这个PIC貌似走丢了..."></a>
+	        		<div class="fh5co-desc">图片 - yurikoto(竖屏）</div>
         		</div>
         	</div>
         	<div class="item">
