--- a/PICAPI/lab/search2.html
+++ b/PICAPI/lab/search2.html
@@ -115,7 +115,7 @@
 											使用方法：
 											<ol>
 												<li>输入PID，点获取JSON，跳转至另一页面</li>
-												<li>复制新页面上的所有文字(有些浏览器(火狐)会自动格式化,请复制原始数据)</li>
+												<li>复制返回值的所有文字(有些浏览器(火狐)会自动格式化,请复制原始数据)</li>
 												<li>将数据黏贴至大输入框,点击解析JSON</li>
 												<li>查看结果</li>
 											</ol>
@@ -127,6 +127,10 @@
 								<div class="form-group">
 									<input type="submit" class="btn btn-primary" value="获取JSON" onclick="get()">
 								</div>
+								<div class="fh5co-pricing-table">
+									<h3>获取到的JSON（返回值）</h3>
+									<div id="api"></div>
+								</div>								
 								<div class="form-group">           
 									<div class="form-group">
 										<textarea name="message" id="json" cols="30" class="form-control" rows="10" placeholder="输入获取到的JSON原数据 ..."></textarea>
@@ -142,7 +146,7 @@
 						<div class="col-md-6">
 							<div class="fh5co-pricing-table">
 								<h3>原图</h3>
-								 <a id="pic2" class="image-popup fh5co-board-img"><img id="pic" alt="你要的图片没有啦~ （请检查你输入的PID或在PID后面加上编号如‘ 12345678-2’" class="img-rounded img-responsive"> </a>
+								 <a id="pic2" class="image-popup fh5co-board-img"><img id="pic" alt="你要的图片没有啦~ （请检查你输入的PID或在PID后面加上编号如‘ 80699577-2’" class="img-rounded img-responsive"> </a>
 								<!--br><a id="pic3" download="1.jpg" class="btn btn-block btn-sm btn-primary">下载原图</a-->
 								 <br>
 								 <h3>网址</h3>
@@ -274,7 +278,9 @@ $("#src").click(function() {
 <script>
 	function get(){
 		var id=document.getElementById("ppid").value;
-		window.open("https://api.ardor.one/illust/"+id+"") 
+		var api="<iframe src=\"https://api.ardor.one/illust/"+id+"\" style=\"width: 100%;height: 90%;\"></iframe>";
+		document.getElementById("api").innerHTML=api;
+		//window.open("https://api.ardor.one/illust/"+id+"");
 	}
 </script>
 </html>
