--- a/PICAPI/mine.html
+++ b/PICAPI/mine.html
@@ -120,6 +120,12 @@
 							<li>简介1：こんにちは！私はNtsc.！趣味はスケッチです、アニメのように。</li>
 							<li>简介2：大家好哇！我是Ntsc！我的兴趣爱好是素描，二次元赛高！</li>
 						</div>
+						<div class="fh5co-pricing-table">
+							<h3>网站</h3>
+							<li>Pixiv主页：https://www.pixiv.net/users/74650965</li>
+							<li>我的博客：https://ntsc-yrx.github.io/</li>
+							<li>国内P站：https://pixivel.moe/user?id=74650965</li>
+						</div>
 						
 					</div>
 				</div>	
@@ -134,6 +140,12 @@
 	        		<a href="https://pximg.rainchan.win/img?img_id=11111111" class="image-popup fh5co-board-img"><img src="https://pximg.rainchan.win/img?img_id=11111111" alt="这个PIC貌似走丢了..."></a>
         		</div>
         		<div class="fh5co-desc">图片 - PID:11111111</div>
+        	</div>
+			<div class="item">
+        		<div class="animate-box">
+	        		<a href="https://pximg.rainchan.win/img?img_id=93855975" class="image-popup fh5co-board-img"><img src="https://pximg.rainchan.win/img?img_id=93855975" alt="这个PIC貌似走丢了..."></a>
+        		</div>
+        		<div class="fh5co-desc">图片 - PID:93855975</div>
         	</div>
         	<div class="item">
         		<div class="animate-box">
