--- a/fos/index.html
+++ b/fos/index.html
@@ -115,7 +115,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">多功能</a></h4>
+              <h4 class="title"><a href="">多功能 | apps apps apps apps</a></h4>
               <p class="description">应用很多</p>
             </div>
           </div>
@@ -123,7 +123,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">方便</a></h4>
+              <h4 class="title"><a href="">方便 | useful useful useful useful</a></h4>
               <p class="description">随时随地</p>
             </div>
           </div>
@@ -131,7 +131,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">高性能</a></h4>
+              <h4 class="title"><a href="">高性能 | high high high high</a></h4>
               <p class="description">建议内存8GB</p>
             </div>
           </div>
@@ -140,7 +140,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">互联互通</a></h4>
-              <p class="description">互联互通</p>
+              <p class="description">互联互通 | link link link link</p>
             </div>
           </div>
 
@@ -155,19 +155,18 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <h3>Find Out More <span>About Us</span></h3>
+          <h3>关于 <span>简介</span></h3>
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="https://cdn.gitblock.cn/Media?name=35C1491D11A1309B93C7A8C9EDBE1520.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>FineOS!</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              马上体验！
             </p>
             <ul>
               <li>
@@ -284,7 +283,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4><a href="os.html">网页版</a></h4>
-              <p>马上开始</p>
+              <p>马上开始 | startNow!startNow!startNow!startNow!</p>
             </div>
           </div>
 
@@ -292,14 +291,14 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="os.html">Windows版</a></h4>
-              <p>适合win64,32</p>
+              <p>适合win64,32 | forWindows!forWindows!forWindows!</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="os.html">MacOS版</a></h4>
+              <h4><a href="os.html">MacOS版 | donot havedonot havedonot have</a></h4>
               <p>适合mac</p>
             </div>
           </div>
@@ -307,7 +306,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="os.html">Linux版</a></h4>
+              <h4><a href="os.html">Linux版 | donot havedonot havedonot have</a></h4>
               <p>适合Linux</p>
             </div>
           </div>
