--- a/fos/index.html
+++ b/fos/index.html
@@ -287,6 +287,15 @@
             </div>
           </div>
 
+          <div class="row">
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                <h4><a href="https://create.codelab.club/projects/21409/embed/">第三方网页版</a></h4>
+                <p>马上开始 | startNow!startNow!startNow!startNow!</p>
+              </div>
+            </div>
+
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
